src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnloadableBundleClass6/InvalidUnloadableBundleClass6.php
<?php

namespace Invalid\UnloadableBundleClass6;

interface InvalidUnloadableBundleClass6
{
    /**
     * Invalid because it cannot be instantiated
     */
}